@@ -31,6 +31,7 @@
 #include <string.h>
 
 #include "openjpeg.h"
+#include "cio.h"
 #include "j2k.h"
 #include "jp2.h"
 #include "mj2.h"
