@@ -31,9 +31,9 @@
 #include <string.h>
 
 #include "openjpeg.h"
+#include "cio.h"
 #include "j2k.h"
 #include "jp2.h"
-#include "cio.h"
 #include "mj2.h"
 
 static int int_ceildiv(int a, int b) {
